--- a/style/style.css
+++ b/style/style.css
@@ -125,3 +125,31 @@ header nav a:before {
 }
 
 /*      Header       */
+
+/*      Main        */
+
+main h1 {
+	text-align: center;
+	text-transform: uppercase;
+	font-size: 52px;
+	color: #888888;
+	letter-spacing: 4px;
+	font-weight: 400;
+}
+
+main .main__logo {
+	margin-top: 20px;
+}
+main .main__logo a {
+	position: relative;
+	margin: 0 10px;
+}
+
+main .main__logo a .fa-chevron-down {
+	position: absolute;
+	bottom: -25px;
+    left: 50%;
+    transform: translateX(-50%);
+    font-size: 23px;
+    color: #888888;
+}
