--- a/style/login.css
+++ b/style/login.css
@@ -60,7 +60,9 @@
     padding: 12px 15px;
     margin: 8px 0;
     border-radius: 2px;
-    height: 40px
+    height: 40px;
+    width: 100%;
+    border: 0 solid #fff;
 }
 
 #login-container {
